unpackaged/main/default/objects/sked_Staffing_Constraint_RO__c/fields/sked_Add_To_Staffing_Constraint__c.field-meta.xml
<CustomField>
    <fullName>sked_Add_To_Staffing_Constraint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to Staffing Constraint</label>
    <type>Checkbox</type>
</CustomField>