unpackaged/main/default/objects/sked_Staffing_Constraint_RO__c/fields/sked_Resource_Override__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource_Override__c</fullName>
    <label>Resource Override</label>
    <referenceTo>sked__Resource_Override__c</referenceTo>
    <relationshipLabel>Staffing Constraint Resource Overrides</relationshipLabel>
    <relationshipName>Staffing_Constraint_Resource_Overrides</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>