unpackaged/main/default/objects/sked_Staffing_Constraint_RO__c/fields/sked_Staffing_Constraint__c.field-meta.xml
<CustomField>
    <fullName>sked_Staffing_Constraint__c</fullName>
    <label>Staffing Constraint</label>
    <referenceTo>sked_Staffing_Constraint__c</referenceTo>
    <relationshipLabel>Staffing Constraint Resource Overrides</relationshipLabel>
    <relationshipName>Staffing_Constraint_Resource_Overrides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>